--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -55,6 +55,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_FirstPersonBP",NewGameName="/Script/ChickenAlarm3000")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_FirstPersonBP",NewGameName="/Script/ChickenAlarm3000")
+bUseFixedFrameRate=True
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
@@ -69,4 +70,7 @@ bReportStats=False
 ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
+
+[/Script/GameplayDebugger.GameplayDebuggerConfig]
+ActivationKey=F12
 
