flying birds now working

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -74,3 +74,9 @@ ManualIPAddress=
 [/Script/GameplayDebugger.GameplayDebuggerConfig]
 ActivationKey=F12
 
+[/Script/AIModule.AISystem]
+EnvQueryManagerClassName=None
+
+[/Script/NavigationSystem.RecastNavMesh]
+VerticalDeviationFromGroundCompensation=3000.000000
+
